--- a/lab4/lab4.tex
+++ b/lab4/lab4.tex
@@ -130,11 +130,11 @@ I семестр, 2021/22 уч. год}
     
 {\Huge hlist\_item.h}
 \inputminted
-    {C++}{hlistitem.h}
+    {C++}{hlist\_item.h}
 
 {\Huge hlist\_item.inl}
 \inputminted
-    {C++}{hlistitem.inl}
+    {C++}{hlist\_item.inl}
     
 {\Huge tlinkedlist.h}
 \inputminted
